Add semantic html and navigation bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Yuk Berkebun</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li>Definisi</li>
+                <li>Jenis-Jenis Kebun</li>
+                <li>Teknik-Teknik Menanam</li>
+                <li>Profil</li>
+            </ul>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
