Added new font (aAlleyGarden.tth) and apply it to navigation

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <nav>
             <ul>
-                <li>Definisi</li>
-                <li>Jenis-Jenis Kebun</li>
-                <li>Teknik-Teknik Menanam</li>
-                <li>Profil</li>
+                <li><a href="#">Definisi</a></li>
+                <li><a href="#">Jenis-Jenis Kebun</a></li>
+                <li><a href="#">Teknik-Teknik Menanam</a></li>
+                <li><a href="#">Profil</a></li>
             </ul>
         </nav>
     </header>
