Add website title and description to the top-right of the page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 <li><a href="#">Profil</a></li>
             </ul>
         </nav>
+        <div>
+            <span id="website-title">Yuk Berkebun!</span><br>
+            <span id="small-website-description">Website Tentang Berkebun</span>
+        </div>
     </header>
     <main></main>
     <footer></footer>
