--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         </div>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+        <p>Website Yuk Berkebun &#169; 2022, Alif Muqtadir</p>
+    </footer>
 </body>
 </html>
