Add some placeholders for pages with their hyperlinks to other pages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
             <span id="small-website-description">Website Tentang Berkebun</span>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="content">
+            <div class="article">
+                <span id="page1">Page 1</span>
+                <a href="#page2">Go to page 2</a>
+            </div>
+            <div class="article">
+                <span id="page2">Page 2</span>
+                <a href="#page3">Go to page 3</a>
+            </div>
+            <div class="article">
+                <span id="page3">Page 3</span>
+                <a href="#page1">Go to page 1</a>
+            </div>
+        </div>
+    </main>
     <footer>
         <p>Website Yuk Berkebun &#169; 2022, Alif Muqtadir</p>
     </footer>
