Change 'main' element background color to transparent + Add border radius to 'main' element + Delete text of span elements inside article elements

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     </header>
     <main>
         <div class="content">
-            <div class="article">
-                <span id="page1">Page 1</span>
+            <div class="article card">
+                <span id="page1"></span>
                 <a href="#page2">Go to page 2</a>
             </div>
-            <div class="article">
-                <span id="page2">Page 2</span>
+            <div class="article card">
+                <span id="page2"></span>
                 <a href="#page3">Go to page 3</a>
             </div>
-            <div class="article">
-                <span id="page3">Page 3</span>
+            <div class="article card">
+                <span id="page3"></span>
                 <a href="#page1">Go to page 1</a>
             </div>
         </div>
