Use navigation to navigate from pages

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Definisi</a></li>
-                <li><a href="#">Jenis-Jenis Kebun</a></li>
-                <li><a href="#">Teknik-Teknik Menanam</a></li>
-                <li><a href="#">Profil</a></li>
+                <li><a href="#definisi">Definisi</a></li>
+                <li><a href="#jenis-jenis-kebun">Jenis-Jenis Kebun</a></li>
+                <li><a href="#teknik-teknik-menanam">Teknik-Teknik Menanam</a></li>
+                <li><a href="#profil">Profil</a></li>
             </ul>
         </nav>
         <div>
@@ -25,16 +25,16 @@
     <main>
         <div class="content">
             <div class="article card">
-                <span id="page1"></span>
-                <a href="#page2">Go to page 2</a>
+                <span id="definisi"></span>
             </div>
             <div class="article card">
-                <span id="page2"></span>
-                <a href="#page3">Go to page 3</a>
+                <span id="jenis-jenis-kebun"></span>
             </div>
             <div class="article card">
-                <span id="page3"></span>
-                <a href="#page1">Go to page 1</a>
+                <span id="teknik-teknik-menanam"></span>
+            </div>
+            <div class="article card">
+                <span id="profil"></span>
             </div>
         </div>
     </main>
