Add card class to 'main' element

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <span id="small-website-description">Website Tentang Berkebun</span>
         </div>
     </header>
-    <main>
+    <main class="card">
         <div class="content">
             <div class="article card">
                 <span id="definisi"></span>
