--- a/index.html
+++ b/index.html
@@ -54,9 +54,105 @@
             </div>
             <div class="article card">
                 <span id="jenis-jenis-kebun"></span>
+                <div class="wrapper">
+                    <h2>Jenis-Jenis Kebun</h2>
+                    <p>Berdasarkan luasnya, kebun dapat dibedakan menjadi tiga:</p>
+                    <section>
+                        <h3>1. Kebun Pekarangan</h3>
+                        <img src="assets/images/kebun-sayur-di-pekarangan.jpg" alt="Kebun Pekarangan">
+                        <p>Kebun jenis ini adalah kebun yang dibuat di halaman rumah penduduk, sehingga luasnya kecil. 
+                            Biasanya masyarakat memanfaatkan lahan kosong yang ada di halaman rumah mereka untuk ditanami 
+                            tanaman-tanaman yang dapat menghasilkan pangan seperti buah-buahan, sayur-sayuran, dan yang 
+                            lainnya. Terkadang juga kebun di pekarangan dibuat dengan metode hidroponik.
+                        </p>
+                    </section>
+                    <div class="clear"></div>
+                    <section>
+                        <h3>2. Kebun Ukuran Sedang</h3>
+                        <img src="assets/images/kebun.jpg" alt="Kebun ukuran sedang">
+                        <p>Kebun ukuran sedang atau yang biasa kita kenal dengan sebutan kebun saja. Adalah lahan kosong 
+                            yang dimiliki oleh warga yang areanya cukup luas untuk ditanami tanaman-tanaman tertentu untuk
+                            dijual hasilnya. Kebun jenis ini pada umumnya dijadikan mata pencaharian oleh masyarakat. Jenis 
+                            tanaman yang ditanam bervariasi, bisa berupa tanaman pangan seperti jagung, ubi, sayur-sayuraan 
+                            dan buah-buahan seperti jeruk dan yang lainnya atau juga dapat berupa tanaman yang menjadi bahan 
+                            baku atau bumbu masakan seperti merica, cabe, jahe, dan rempah-rempah lainnya.
+                        </p>
+                    </section>
+                    <div class="clear"></div>
+                    <section>
+                        <h3>3. Perkebunan</h3>
+                        <img src="assets/images/perkebunan-teh.jpg" alt="Perkebunan" >
+                        <p>Kebun jenis ini merupakan kebun yang paling luas dari jenis-jenis kebun yang telah disebutkan
+                            sebelumnya. Perkebunan memiliki area yang sangat luas bahkan dapat mencapai puluhan hektar 
+                            atau lebih. Biasanya perkebunan dimiliki oleh perusahaan atau pebisnis besar. Contoh dari perkebunan
+                            adalah perkebunan kelapa sawit, perkebunan teh, perkebunan kopi, perkebunan karet, perkebunan tebu,
+                            perkebunan kapas, perkebunan cokelat dan lain-lain. Karena area perkebunan sangat luas, maka hasil 
+                            panennya pun sangat besar, dan bahkan banyak yang diekspor ke negara lain.
+                        </p>
+                    </section>
+                    <div class="clear"></div>
+                </div>
             </div>
             <div class="article card">
                 <span id="teknik-teknik-menanam"></span>
+                <div class="wrapper">
+                    <h2>Teknik-Teknik Menanam</h2>
+                    <section>
+                        <h3>1. Teknik Hidroponik</h3>
+                        <img src="assets/images/hidroponik.jpg" alt="Hidroponik" class="featured-image">
+                        <p>Hidroponik adalah cara bertanam yang lebih memanfaatkan air ketimbang tanah. 
+                            Salah satu caranya adalah dengan cara memanfaatkan pipa air. Bagian terpenting yang 
+                            harus diperhatikan dalam membuat hidroponik adalah suhu, nutrisi untuk tanaman, dan 
+                            intensitas cahaya.
+                        </p>
+                        <p>
+                            Dalam penanaman dengan hidroponik, bisa menggunakan lahan seluas 1×2 meter yang bisa 
+                            menampung sekitar 20-25 tanaman. Hidroponik sendiri memiliki konsep utama yaitu 
+                            mengganti unsur hara yang biasa didapat tanaman dari tanah dengan memberikan nutrisi 
+                            buatan pada air yang digunakan sebagai media tanam dalam hidroponik. Oleh karena itu, 
+                            perawatan hidroponik pun memerlukan ketekunan.
+                        </p>
+                    </section>
+                    <div class="clear"></div>
+                    <section>
+                        <h3>2. Teknik Tabulampot (Tanam Buah dalam Pot)</h3>
+                        <img src="assets/images/tabulampot.jpg" alt="Tabulampot" class="featured-image">
+                        <p>
+                            Teknik tabulampot adalah teknologi budidaya tanaman dalam lahan pertanian 
+                            dengan memanfaatkan ruangan yang terbatas untuk menumbuhkan tanaman yang produktif 
+                            di dalam pot. Teknik menanam ini menggunakan media tanam seperti pot berbahan tanah 
+                            liat dan kayu dengan menggunakan campuran antara tanah, kompos dan sekam dengan 
+                            komposisi 1:1:1.
+                        </p>
+                        <p>
+                            Dalam fungsinya, tabulampot banyak membantu para pecinta tanaman yang tidak memiliki 
+                            lahan/halaman yang luas. Disamping itu, metode ini menjadi pemecah kebuntuan dimana 
+                            orang-orang cenderung bosan merawat tanaman hias yang pada pelaksanaaan sehari-harinya 
+                            hanya berujung pada pembentukan bunga atau pembentukan fisik tanaman. Pada tabulampot, 
+                            perkembangan fisik tanaman seperti batang tidak seberapa diperlukan, karena tanaman buah 
+                            ini memang ditujukan untuk ditanam didalam pot yang cenderung kecil dan perkembangan 
+                            fisiknya harus dibatasi, sehingga penggunaan pupuk untuk nutrisi juga harus disesuaikan.
+                        </p>
+                    </section>
+                    <div class="clear"></div>
+                    <section>
+                        <h3>3. Teknik Vertikultur</h3>
+                        <img src="assets/images/vertikultur.jpeg" alt="Vertikultur" class="featured-image">
+                        <p>
+                            Vertikultur adalah sistem budidaya pertanian atau cara berkebun dengan media tanam yang 
+                            dilakukan secara vertikal atau bertingkat, baik indoor ataupun outdoor. Vertikultur 
+                            sendiri merupakan gabungan dari dua kata, yaitu vertical dan culture. Vertical memiliki 
+                            arti berdiri, sedangkan culture artinya budaya. Kedua kata ini berasal dari bahasa Inggris.
+                        </p>
+                        <p>
+                            Manfaat vertikultur sudah banyak dilirik para pembudidaya tanaman. Karena pola budidayanya yakni 
+                            tanaman disusun dengan cara bertingkat sehingga Anda tak memerlukan tanah yang luas untuk mulai 
+                            menanam. Selain itu, karena semua tanaman tumbuh di dalam sebuah pot atau botol bekas, tentunya 
+                            kita tak akan mengalami kesulitan ketika memindahkannya.
+                        </p>
+                    </section>
+                    <div class="clear"></div>
+                </div>
             </div>
             <div class="article card">
                 <span id="profil"></span>
