--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                             <p>Kebun jenis ini adalah kebun yang dibuat di halaman rumah penduduk, sehingga luasnya kecil. 
                                 Biasanya masyarakat memanfaatkan lahan kosong yang ada di halaman rumah mereka untuk ditanami 
                                 tanaman-tanaman yang dapat menghasilkan pangan seperti buah-buahan, sayur-sayuran, dan yang 
-                                lainnya. Terkadang juga kebun di pekarangan dibuat dengan metode hidroponik.
+                                lainnya. Terkadang juga kebun di pekarangan dibuat dengan metode hidroponik. Selain itu,
+                                konsumsi sayuran dari kebun sendiri relatif lebih aman dan sekaligus menjadi solusi pemenuhan 
+                                pangan skala rumah tangga, berbiaya murah dan mudah didapat.
                             </p>
                         </section>
                         <div class="clear"></div>
@@ -159,6 +161,31 @@
             <aside>
                 <div class="article card">
                     <span id="profil"></span>
+                    <div class="wrapper">
+                        <h2>Profil</h2>
+                        <img src="assets/images/profil.jpg">
+                        <section>
+                            <h3>Identitas Diri</h3>
+                            <table>
+                                <tr>
+                                    <th>Nama</th>
+                                    <td>Alif Muqtadir</td>
+                                </tr>
+                                <tr>
+                                    <th>Alamat</th>
+                                    <td>Kendari, Sulawesi Tenggara</td>
+                                </tr>
+                                <tr>
+                                    <th>Email</th>
+                                    <td>alifm.dev@gmail.com</td>
+                                </tr>
+                                <tr>
+                                    <th>Hobi</th>
+                                    <td>Berkebun, jalan-jalan, dll</td>
+                                </tr>
+                            </table>
+                        </section>
+                    </div>
                 </div>
             </aside>
         </div>
