--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         </div>
     </header>
     <main>
-        <div class="content">
+        <div class="content card">
             <div class="wrapper">
-                <article></article>
-                <article></article>
-                <article></article>
+                <article class="card"></article>
+                <article class="card"></article>
+                <article class="card"></article>
             </div>
         </div>
-        <aside>
+        <aside class="card">
         </aside>
     </main>
     <footer>
