Add id to div element inside every article to enable navigation and add smooth scrolling to it

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <main>
         <div class="content card">
             <div class="wrapper">
-                <article class="card"></article>
-                <article class="card"></article>
-                <article class="card"></article>
+                <article class="card"><div id="definisi"></div></article>
+                <article class="card"><div id="jenis-jenis-kebun"></div></article>
+                <article class="card"><div id="teknik-teknik-menanam"></div></article>
             </div>
         </div>
         <aside class="card">
