--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
     </header>
     <main>
         <div class="content card">
-            <div class="wrapper">
-                <article class="card"><div id="definisi"></div></article>
-                <article class="card"><div id="jenis-jenis-kebun"></div></article>
-                <article class="card"><div id="teknik-teknik-menanam"></div></article>
-            </div>
+            <div class="wrapper" id="articles-wrapper"></div>
         </div>
         <aside class="card">
         </aside>
