Change the backgrounds of article and aside elements to white

--- a/index.html
+++ b/index.html
@@ -29,6 +29,34 @@
             <div class="wrapper" id="articles-wrapper"></div>
         </div>
         <aside class="card">
+            <header>
+                <h2>Profil</h2>
+                <figure>
+                    <img src="assets/images/profil.jpg">
+                    <figcaption>Foto Profil</figcaption>
+                </figure>
+            </header>
+            <section>
+                <h3>Identitas Diri</h3>
+                <table>
+                    <tr>
+                        <th>Nama</th>
+                        <td>Alif Muqtadir</td>
+                    </tr>
+                    <tr>
+                        <th>Alamat</th>
+                        <td>Kendari, Sulawesi Tenggara</td>
+                    </tr>
+                    <tr>
+                        <th>Email</th>
+                        <td>alifm.dev@gmail.com</td>
+                    </tr>
+                    <tr>
+                        <th>Hobi</th>
+                        <td>Berkebun, jalan-jalan, dll</td>
+                    </tr>
+                </table>
+            </section>
         </aside>
     </main>
     <footer>
