--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
     <header>
+        <div>
+            <div class="title-wrapper">
+                <div id="website-title">Yuk Berkebun!</div>
+                <div id="small-website-description">Website Tentang Berkebun</div>
+            </div>
+        </div>
         <nav>
             <ul>
                 <li><a href="#definisi">Definisi</a></li>
@@ -17,15 +23,9 @@
                 <li><a href="#teknik-teknik-menanam">Teknik-Teknik Menanam</a></li>
             </ul>
         </nav>
-        <div>
-            <div class="title-wrapper">
-                <div id="website-title">Yuk Berkebun!</div>
-                <div id="small-website-description">Website Tentang Berkebun</div>
-            </div>
-        </div>
     </header>
     <main>
-        <div class="content card">
+        <div class="content">
             <div class="wrapper" id="articles-wrapper"></div>
         </div>
         <aside class="card">
